[workspace]
members = [".", "crates/lmdb-blob-store", "crates/nosta-git", "crates/nosta-relay", "crates/git-remote-nostr"]

[package]
name = "nosta"
version = "0.1.0"
edition = "2021"

[dependencies]
lmdb-blob-store = { path = "crates/lmdb-blob-store" }
hashtree = { path = "../hashtree-rs/crates/hashtree" }
heed = "0.20"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
byteorder = "1"
toml = "0.8"
dirs = "5"
base64 = "0.22"
rand = "0.8"

# Nostr support for Blossom auth
nostr = "0.37"
secp256k1 = { version = "0.29", features = ["global-context"] }

# Nostr event database (use local path to match enostr)
nostrdb = { path = "../nostrdb-rs" }

# Relay connections
nosta-relay = { path = "crates/nosta-relay" }
enostr = { path = "../notedeck/crates/enostr" }

# Git smart HTTP protocol
nosta-git = { path = "crates/nosta-git" }

# Logging
tracing = "0.1"

# STUN server for WebRTC
webrtc-stun = "0.1"
# WebRTC for P2P connections
webrtc = "0.14"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio-tungstenite = "0.24"
