[package]
name = "git-remote-nostr"
version = "0.1.0"
edition = "2021"
description = "Git remote helper for nostr - push/pull git repos via nostr and hashtree"

[[bin]]
name = "git-remote-nostr"
path = "src/main.rs"

[dependencies]
# Git protocol
nosta-git = { path = "../nosta-git" }

# Content-addressed storage
hashtree = { path = "../../../hashtree-rs/crates/hashtree" }
lmdb-blob-store = { path = "../lmdb-blob-store" }
dirs = "5"

# Nostr
nostr = "0.37"
secp256k1 = { version = "0.29", features = ["global-context"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for fetching blobs
reqwest = { version = "0.12", features = ["rustls-tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
