[package]
name = "lmdb-blob-store"
version = "0.1.0"
edition = "2021"
description = "LMDB-backed content-addressed blob storage"

[dependencies]
hashtree.workspace = true
heed = "0.20"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
