[package]
name = "nosta-git"
version = "0.1.0"
edition = "2021"
description = "Git smart HTTP protocol implementation for nosta"

[dependencies]
# Hashtree storage
hashtree.workspace = true
lmdb-blob-store = { path = "../lmdb-blob-store" }

# Async runtime
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }

# Utils
anyhow = "1"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
thiserror = "2"

[dev-dependencies]
git2 = "0.20"
tempfile = "3"
tokio-test = "0.4"
axum = "0.7"
tower = "0.5"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking"] }
