[package]
name = "nosta-relay"
version = "0.1.0"
edition = "2021"
description = "Nostr relay implementation using nostrdb"

[dependencies]
# Core
nostrdb.workspace = true
enostr.workspace = true
nostr = "0.37"

# Async/Web
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Utilities
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.24"
